Chore: Replace Arrays.asList with List.of in test for simplicity